Fix spacing of submit button for mobile view

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -70,7 +70,6 @@
         }
 
         &__submit.heading-text {
-            height: 55px;
             font-size: 30px;
             color: #d9d9d9;
             border-radius: 4px;
@@ -80,7 +79,7 @@
             color: #ffffff;
             background-color: #2c527c;
             cursor: pointer;
-            width: 150px;
+            padding: 10px 20px;
 
             &-disabled {
                 background-color: #7a8b9e;
@@ -113,9 +112,7 @@
             }
 
             &__submit.heading-text {
-                height: 40px;
                 font-size: 25px;
-                width: 100px;
             }
         }
         .contact-top {
